--- a/css/styles.css
+++ b/css/styles.css
@@ -1,446 +1,556 @@
-/* --- globales --- */
-
 @font-face {
     font-family: roboto;
     src:url(../assets/fonts/Roboto-Light.ttf);
 
 }
 
-* {
-    font-family: 'roboto', sans-serif;
-    margin: 0;
+body {
+    font-family: roboto;
     padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    
-}
-
-/* --- títulos --- */
-
-h1, h2, h3, h4, h5, h6 {
-    font-weight: lighter;
-}
-
-h1 {
-    font-size: 2rem;
-    color:#004578;
-}
-
-h2 {
-    font-size: 1.5rem;
-    color:#005a9e;
-    padding-bottom: 20px;
-}
-
-h3 {
-    font-size: 1.2rem;
-    color:#106ebe;
-}
-
-h4 {
-    font-size: 1rem;
-    color:#0078d4;
-}
-
-h5 {
-    font-size: 0.9rem;
-    color:#2b88d8;
-    padding-top: 15px;
-}
-
-h6 {
-    font-size: 0.5rem;
-    color:#71afe5;
-}
-
-p {
-    font-size: 1.5rem;
-    color:#788199;
-    
-}
-
-
-/* --- textos por defecto --- */
-
-.text-primary {
-    color: #4b6376 !important;
-}
-
-.text-secondary {
-    color: #04215c !important;
-}
-
-
-/* --- barra de navegación --- */
-
-#navbarS li > a {
-    color: #ffffff;
-
-}
-
-/* --- ----------------------------------- --- */
-/* --- ------- barra de navegación ------- --- */
-/* --- ----------------------------------- --- */
-
-.navbar{
-    background-color: #2d93f3;
-    
-}
-
-
-/* --- ------------------------ --- */
-/* --- ------- carrusel ------- --- */
-/* --- ------------------------ --- */
-
-.carruselV{
-    height: 90% !important;
-
-}
-
-
-/* --- ------------------------- --- */
-/* --- ------- categpría ------- --- */
-/* --- ------------------------- --- */
-
-
-.categoriaV{
-    height: 90% !important;
-    background-color: red;
-}
-
-
-/* --- ----------------------- --- */
-/* --- ------- Niveles ------- --- */
-/* --- ----------------------- --- */
-
-.nivelV{
-    height: 90% !important;
-    background-color: rgb(128, 217, 26);
-}
-
-
-
-
-
-
-/* --- ------------------------ --- */
-/* --- ------- Horarios ------- --- */
-/* --- ------------------------ --- */
-
-
-*{
     margin: 0;
-    padding: 0;
-    
-    
 }
 
-.horas {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+html {
+    scroll-behavior: smooth;
+}
+
+section {
     min-height: 100vh;
-
+    box-sizing: border-box;
 }
 
-.card{
-    position: relative;
-    width: 300px;
-    height: 350px;
-
+#menu {
+    background-color: #0e5bbf8e;
+    display: grid;
+    grid-template-columns: repeat(4, 200px);
+    grid-template-rows: repeat(2, 200px);
+    justify-content: center;
+    align-content: center;
+    grid-template-areas: 
+        "about about projects projects"
+        "about about posts contact";
 }
 
-
-.card .face{
-    position: absolute;
-    width: 100%;
+#menu .tile {
     height: 100%;
-    backface-visibility: hidden;
-    border-radius: 10px;
     overflow: hidden;
-    transition: .5s;
-
+    cursor: pointer;
 }
 
-.card .front{
-    transform: perspective(600px) rotateY(0deg);
-    box-shadow: 0 5px 10px #5d5e5f2f;
-
+#menu .tile a {
+    text-decoration: none;
 }
 
-.card .front img{
-    position: absolute;
-    width: 100%;
+#menu .tile .front {
+    color: white;
+    background-color: black;
     height: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+
+    transition: all 0.3s ease;
+
+    background-size: cover;
+    background-position: center center;
+}
+
+#menu .tile .back {
+    background-color: #222;
+    color: #fff;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    height: 100%;
+    font-weight: bold;
+    font-size: 28px;
+
+}
+
+
+#menu .tile:hover .front {
+    margin-top: -100%;
+}
+
+#menu .projects-tile:hover .front {
+    margin-top: -50%;
+}
+
+#menu .about-tile .front {
+    background-image: url(../assets/image/carrusel3.png);    
+}
+
+#menu .projects-tile .front {
+    background-image: url(../assets/image/cat_mix.png);    
+}
+
+#menu .posts-tile .front {
+    background-image: url(../assets/image/carrusel1.png);    
+}
+
+#menu .contact-tile .front {
+    background-image: url(../assets/image/carrusel2.png);    
+}
+
+.about-tile {
+    grid-area: about;
+}
+
+.projects-tile {
+    grid-area: projects;
+}
+
+.posts-tile {
+    grid-area: posts;
+}
+
+.contact-tile {
+    grid-area: contact;
+}
+
+
+/* ------------------------------------------------------------------ */
+                        /* --- MENU CONTACTO --- /*
+/* ------------------------------------------------------------------ */
+
+#menu-2 {
+    background-color: #0e5bbf8e;
+    display: grid;
+    grid-template-columns: repeat(2, 500px);
+    grid-template-rows: repeat(1, 500px);
+    justify-content: center;
+    align-content: center;
+    grid-template-areas: 
+        "home contact";
+}
+
+#menu-2 .tile {
+    height: 100%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#menu-2 .tile a {
+    text-decoration: none;
+}
+
+#menu-2 .tile .front {
+    color: white;
+    background-color: black;
+    height: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+
+    transition: all 0.3s ease;
+
+    background-size: cover;
+    background-position: center center;
+}
+
+#menu-2 .tile .back {
+    background-color: #222;
+    color: #fff;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    height: 100%;
+    font-weight: bold;
+    font-size: 28px;
+}
+
+#menu-2 .tile:hover .front {
+    margin-top: -100%;
+}
+
+#menu-2 .home-tile .front {
+    background-image: url(../assets/image/carrusel3.png);    
+}
+
+#menu-2 .menu-contact-tile .front {
+    background-image: url(../assets/image/carrusel2.png);    
+}
+
+
+/* ------------------------------------------------------------------ */
+                        /* --- ABOUT --- /*
+/* ------------------------------------------------------------------ */
+
+#about {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+#about .tile {
+    border-radius: 10px;
+    padding: 40px;
+    box-sizing: border-box;
+    background-color: #eee;
+
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+    
+}
+
+#about .tile img {
+    width: 70%;
+}
+
+
+#about .tile-1 {
+    grid-column: 1 / 2;
+}
+
+#about .tile-2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+
+#about .tile-2 img {
+    border-radius: 50%;
     object-fit: cover;
 }
 
-.card .front h3{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 45px;
-    line-height: 45px;
-    color: #fff;
-    background: rgba(0, 0, 0, .4);
-    text-align: center;
-}
-
-.card .back{
-    transform: perspective(600px) rotateY(180deg);
-    background: rgb(3, 50, 77);
-    padding: 15px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 12px;
-    text-align: center;
-    box-shadow: 0 5px 10px #89818169;
-}
-
-.card .back .line{
-    border-top: solid 1px #fff;
-    height: 50px;
-    line-height: 50px;
-}
-
-.card .back h3{
-    font-size: 21px;
-    margin-top: 20px;
-    letter-spacing: 1px;
-}
-
-.card .back p{    
-    letter-spacing: .5px;
-}
-
-
-.card:hover .front{
-    transform: perspective(600px) rotateY(180deg);
-}
-
-.card:hover .back{
-    transform: perspective(600px) rotateY(360deg);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* --- ------------------------ --- */
-/* --- ------- footer ------- --- */
-/* --- ------------------------ --- */
-
-footer{
-    height: 30% !important;
-     
-}
-
-.piepage{
-    width: 100%;
-    background-color: #04215c;
-    color: #ffffff;
-    text-align: center;
-}
-
-.piepage .group-1{
-    width: 100%;
-    max-width: auto;
-    margin: auto;
+#projects {
+    background-color: #000000;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 2.5rem 0rem;
-}
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 10px;
+    margin: 5px;
+    padding: 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "main-photo main-photo photo-2"
+      "main-photo main-photo photo-3"
+      "main-photo main-photo photo-4";
+  }
 
-.piepage .group-1 .box figure{
-    width: 100%;
+  #projects .tile {
+    background-color: #ccc;
+    border-radius: 5px;
+
+    background-size: cover;
+    background-position: center center;
+
+  }
+
+  #projects .tile a {
+    display: grid;
     height: 100%;
-    display: flex;
+  }
+
+  #projects .tile:not(.main-photo) {
+    transition: all 0.1s ease-in;
+    opacity: 0.5;    
+  }
+
+  #projects .tile:hover:not(.main-photo) {
+    transform: scale(0.99);
+    opacity: 1;    
+  }
+  
+  .main-photo {
+    grid-area: main-photo;
+    display: grid;
     justify-items: center;
     align-items: center;
-}
+    padding: 20px;
+    color: #21263d;
+    font-size: 20px;
+  }  
 
-.piepage .group-1 .box figure img{
-    width: 250%; 
-}
+  .photo-2 {
+    grid-area: photo-2;
 
-.piepage .group-1 .box h2{
-    color: #ffffff;
-    margin-bottom: 25px;
-    font-size: 45px;
-}
+    background-image: url(../assets/image/niv_princ_1.jpg);
+  }
+  
+  .photo-3 {
+    grid-area: photo-3;
+    background-image: url(../assets/image/horarios-2.jpg);
+  }
+  
+  .photo-4 {
+    grid-area: photo-4;
+    background-image: url(../assets/image/horarios-3jpg.jpg);
+  }
 
-.piepage .group-1 .box p{
-    color: #ffffff;
-    margin-bottom: 20px;        
-}
-
-.piepage .group-1 .rrss{
-    display: inline-block;
-    text-decoration: none;
-    width: 245px;
-    height: 245px;
-    line-height: 45px;
-    color: #ffffff;
-    margin-right: 10px;
+  .categ{
+    font-size: 3rem;
+    color: #00416f;
     text-align: center;
-    font-size: 4rem;
-    transition: all 300ms ease;
-}
-
-.piepage .group-1 .rrss a:hover{
-    color: #71afe5;
-
-}
-
-.piepage .group-2{
-    background-color: #0078d4;
-    padding: 1rem;
-    text-align: center;
-    color: #ffffff;
-    font-size: 1.2rem;
-
-}
-
-
-
-
-
-/* --- ----------------------------- --- */
-/* --- ------- media queries ------- --- */
-/* --- ----------------------------- --- */
-
-.container,
-.container-fluid,
-.container-xxl,
-.container-xl,
-.container-lg,
-.container-md,
-.container-sm {
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
-  width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media (min-width: 576px) {
-    
-    /* --- ------- containers ------- --- */
-    .container-sm, .container {
-      max-width: 540px;
-      background-color: red;
-    }
-    .container-sm, .carousel-inner {
-        max-height: 30rem;
-    }
-    .container-sm, .carousel-item > img {
-        height: 25rem;
-    }
-
-    /* --- ------- footer ------- --- */
-    .piepage .group-1{
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-        padding: 1.5rem 0rem;
-    }
-
-
-
-
-  }
-  @media (min-width: 768px) {
-    .container-md, .container-sm, .container {
-      max-width: 720px;
-      background-color: blueviolet;
-    }
-    .container-md, .carousel-inner {
-        max-height: 35rem;
-    }
-    .container-md, .carousel-item > img {
-        height: 30rem;
-    }
-
-    /* --- ------- footer ------- --- */
-    .piepage .group-1{
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-        padding: 1.5rem 0rem;
-    }
-
-  }
-  @media (min-width: 992px) {
-    .container-lg, .container-md, .container-sm, .container {
-      max-width: 960px;
-      background-color: #788199;
-    }
-    .container-lg, .carousel-inner {
-        max-height: 40rem;
-    }
-    .container-lg, .carousel-item > img {
-        height: 35rem;
-    }
-
-    /* --- ------- footer ------- --- */
-    .piepage .group-1{
-        width: 100%;
-        grid-template-columns: repeat(3, 1fr);
-        padding: 2rem 0rem;
-    }
-
-
-  }
-  @media (min-width: 1200px) {
-    .container-xl, .container-lg, .container-md, .container-sm, .container {
-      max-width: 1140px;
-      background-color: #a615e9;
-    }
-    .container-xl, .carousel-inner {
-          max-height: 45rem;
-    }
-    .container-xl, .carousel-item > img {
-          height: 40rem;              
-    }
-
-    /* --- ------- footer ------- --- */
-    .piepage .group-1{
-        width: 100%;
-        grid-template-columns: repeat(3, 1fr);
-        padding: 2.5rem 0rem;
-    }
-    
-  }
-  @media (min-width: 1400px) {
-    .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
-      max-width: 1320px;
-      /* background-color: #d3fe00; */
-    }
-    .container-xxl, .carousel-inner {
-        max-height: 70rem;
-    }
-    .container-xxl, .carousel-item > img {
-        height: 70rem;              
-    }
 
 
   }
   
+  #posts {
+    padding: 10px;
+    margin: 5px;
+    background-color: #0095ff;
+    display: grid;
+    grid-template: repeat(1, 300px) / repeat(3, 350px);
+    gap: 10px;
+    justify-content: center;
+    align-content: center;
+  }
+
+  #posts .post {
+    
+    display: grid;
+    align-content: end;
+    border-radius: 5px;
+    background-color: white;
+
+    background-size: cover;
+    background-position: center center;
+
+    overflow: hidden;
+
+  }
+
+  #posts .post a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  #posts .post .title {
+    background-color: rgba(0, 0, 0, 0.47);
+    color: #fff;
+    padding: 10px;
+
+  }
+
+  #posts .post .title:hover {
+    background-color: rgba(255, 255, 255, 0.7);
+    color: #222;
+  }
+
+  #posts .post.post-1 {
+    background-image: url(../assets/image/cat_fem.png);
+  }
+
+  #posts .post.post-2 {
+    background-image: url(../assets/image/cat_masc.png);
+  }
+
+  #posts .post.post-3 {
+    background-image: url(../assets/image/cat_mix.png);
+  }
+
+  #contact {
+    background-color: #000000;
+    display: grid;
+    grid-template: auto 100px / 700px;
+    justify-content: center;
+    align-content: center;
+    box-sizing: border-box;
+  }
+
+  #contact form {
+    padding: 20px;
+    color: #ff8000;
+    display: grid;
+    gap: 15px;
+    grid-template: auto / auto;
+    align-items: center;
+    box-sizing: border-box;
+  }
+
+  #contact form input, #contact form textarea {
+    padding: 5px 50px;
+    box-sizing: border-box;
+    font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+  }
+
+  #contact form input[type="submit"] {
+    background-color: #ff8000;
+    color: #000000;
+    font-weight: 500;
+    font-size: 28px;
+  }
+
+
+
+/* ------------------------------------------------------------------ */
+                        /* --- MEDIA QUERIES --- */
+/* ------------------------------------------------------------------ */
+
+
+
+@media screen and (max-width:1090px) {
+    /* --- MEDU CONTACTOS --- */
+    #menu-2 {
+        grid-template-columns: repeat(2, 400px);
+        grid-template-rows: repeat(1, 400px);
+        
+    }
+
+    #posts {
+        grid-template: repeat(1, 350px) / repeat(3, 250px);
+        padding: 2rem;
+    }       
+}
+
+
+@media screen and (max-width:800px) { 
+    /* --- MEDU CONTACTOS --- */
+    #menu-2 {
+        grid-template-columns: repeat(2, 250px);
+        grid-template-rows: repeat(1, 250px);
+        
+    }
+
+
+    #posts {
+        grid-template: repeat(3, 400px) / repeat(1, 350px);
+        padding: 5% 5% 10% 5%;
+        }
+
+
+
+    #menu {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas: 
+        "about projects"
+        "posts contact";
+    }
+
+    #menu .tile:hover .front {
+        margin-top: -50vh;
+    }
+
+    #about {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 20px;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    #about .tile-1 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+    
+    #about .tile-2 {        
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+
+    #about .tile-3 {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    #about .tile-4 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+
+    #about .tile-5 {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+    
+    #projects {
+        margin: 5px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:
+        "main-photo photo-2"
+        "photo-4 photo-3";
+    }
+
+    #contact {
+        padding: 0 20px;
+        grid-template: auto 100px / 100%;
+    }
+}
+
+@media screen and (max-width:500px) {
+    /* --- MEDU CONTACTOS --- */
+    #menu-2 {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas:
+        "home"
+        "contact";
+    }
+
+    #menu-2 .tile:hover .front {
+        margin-top: -50vh;
+    }
+
+    #menu {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-areas: 
+        "about"
+        "projects"
+        "posts"
+        "contact";
+    }
+
+    #menu .tile:hover .front {
+        margin-top: -25vh;
+    }
+
+    #about {
+        display: grid;
+        grid-template: auto / auto;
+        gap: 20px;
+        padding: 20px;        
+    }
+
+    #about .tile-1 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+    
+    #about .tile-2 {      
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;        
+        
+    }
+
+    #about .tile-3 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+
+    #about .tile-4 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+    }
+
+    #about .tile-5 {
+        grid-column: 1 / 2;
+        grid-row: 5 / 6;
+    }
+
+
+
+    #posts {
+        grid-template: repeat(3, 350px) / repeat(1, 1fr);
+        padding: 2rem 1rem 2rem 1rem;
+    }
+    
+}
+
